--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.14",
+		"carbon-icons-svelte": "^11.4.0",
 		"postcss": "^8.4.21",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
