--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/analytics": "^1.0.2",
 		"carbon-components-svelte": "^0.73.5",
 		"moment": "^2.29.4",
 		"soundex-code": "^2.0.1"
